# a2geant

./: .gitignore  .nfs000000000b3c57ed00000061  .nfs000000001ba274210000026f  A2.cc  A2G4Farm  A2G4Node  A2G4Submit  A2GeantSubmit  CMakeLists.txt  CrystalConvert.in  FindROOT.cmake  ImportantNote.txt  README.md  README_PLUTO  TOF.par  Test.root  modifyMacro.pl  pluto.C  runA2Geant.sh  runGeant.sh  sim_pluto.mac
PolPhysStuff/: PolHadronElasticPhysics.cc  PolHadronElasticPhysics.hh  PolHadronElasticPhysicsN.cc  PolHadronElasticPhysicsN.hh  PolHadronInelasticPhysics.cc  PolHadronInelasticPhysics.hh  PolHadronQuasiFreeProcess.cc  PolHadronQuasiFreeProcess.hh  PolHadronicProcess.cc  PolHadronicProcess.hh  PolNPRotate.cc  PolNPRotate.hh  PolNucleonRotate.cc  PolNucleonRotate.hh  PolUHadronElasticProcess.cc  PolUHadronElasticProcess.hh  PolWHadronElasticProcess.cc  PolWHadronElasticProcess.hh  npolDetCon.cc  npolDetCon.hh  npolEventAction.cc  npolEventAction.hh  npolHit.cc  npolHit.hh  npolPhysicsList.cc  npolPhysicsList.hh  npolPhysicsListMessenger.cc  npolPhysicsListMessenger.hh  npolSteppingAction.cc
cmake/: FindPluto.cmake  g4env.sh  settings.cmake
cmake/Modules/: FindGeant4.cmake  FindROOT.cmake
include/: A2CBOutput.hh  A2CBSD.hh  A2CryoTarget.hh  A2DetCherenkov.hh  A2DetCrystalBall.hh  A2DetCrystalBall.hh.save  A2DetMWPC.hh  A2DetMWPC.hh.jamie  A2DetNestPID.hh  A2DetPID.hh  A2DetPID1.hh  A2DetPID2.hh  A2DetPID3.hh  A2DetPol.hh  A2DetTAPS.hh  A2DetTOF.hh  A2Detector.hh  A2DetectorConstruction.hh  A2DetectorMessenger.hh  A2EventAction.hh  A2EventActionMessenger.hh  A2Hit.hh  A2MagneticField.hh  A2PhysicsList.hh  A2PhysicsList.hh.4.9.2  A2PhysicsListMessenger.hh  A2PhysicsListMessenger.hh.4.9.2  A2PolarizedTarget.hh  A2PrimaryGeneratorAction.hh  A2PrimaryGeneratorMessenger.hh  A2RunAction.hh  A2SD.hh  A2SolidTarget.hh  A2SteppingAction.hh  A2SteppingVerbose.hh  A2Target.hh  A2VisCBSD.hh  A2VisHit.hh  A2VisSD.hh  A2WCSD.hh  (+8 more)
macros/: DGdoK0Sig.mac  DGdoKLamda.mac  DGdoPhaseSpace.mac  DGdoppi0.mac  DGdoppi0gprime.mac  DetectorSetup.mac  DetectorSetup_Empty.mac  EdGen.mac  EdGen_2Pi0.mac  EdGen_Beam.mac  EdGen_Neutrons.mac  EdGen_Pi0.mac  EdGen_Protons.mac  ListPhysics.mac  RayTracer.mac  RayTracer_movie.mac  detector_movie.mac  doBeamOnTarget.mac  doCohPi.mac  doComptonC12.mac  doDnp.mac  doHe3eta.mac  doNeutronBeam.mac  doPhaseSpace.mac  doPhotonBeam.mac  doneta.mac  donpi.mac  doppi0.mac  exN03Vis12.loop  exN03Vis12.mac  gui.mac  job_g3he_to_3pi03he_2.mac  klam_movie.mac  loop_raytracer.mac  loop_raytracer_light.mac  movieloop.mac  npi_movie.mac  ppi0_movie.mac  vis.mac  vis_raytracer.mac  (+1 more)
npol/: CMakeLists.txt  G4AnalysingPower.lyx  INSTALL  Reconstruct.C  Reconstruct_C.d  bugs.txt  makePatch10.01.p02.csh  npol.cc  test.root  vis.mac
npol/cmake/: settings.cmake
npol/cmake/Modules/: FindGeant4.cmake  FindROOTHelpers.cmake
npol/include/: PolHadronElasticPhysics.hh  PolHadronElasticProcess.hh  PolHadronInelasticPhysics.hh  PolHadronInelasticProcess.hh  PolHadronQuasiFreeProcess.hh  PolHadronicProcess.hh  PolNPRotate.hh  PolNucleonRotate.hh  PolPhysicsList.hh  PolPhysicsListMessenger.hh  npolEventAction.hh  npolPrimGen.hh  npolSD.hh  npolSteppingAction.hh
npol/src/: PolHadronElasticPhysics.cc  PolHadronElasticProcess.cc  PolHadronInelasticPhysics.cc  PolHadronInelasticProcess.cc  PolHadronQuasiFreeProcess.cc  PolHadronicProcess.cc  PolNPRotate.cc  PolNucleonRotate.cc  PolPhysicsList.cc  PolPhysicsListMessenger.cc  npolDetCon.cc  npolEventAction.cc  npolPrimGen.cc  npolSD.cc  npolSteppingAction.cc
src/: A2.cc  A2CBOutput.cc  A2CBSD.cc  A2CryoTarget.cc  A2DetCherenkov.cc  A2DetCrystalBall.cc  A2DetMWPC.cc  A2DetNestPID.cc  A2DetPID.cc  A2DetPID1.cc  A2DetPID2.cc  A2DetPID3.cc  A2DetPol.cc  A2DetTAPS.cc  A2DetTOF.cc  A2Detector.cc  A2DetectorConstruction.cc  A2DetectorMessenger.cc  A2EventAction.cc  A2EventActionMessenger.cc  A2Hit.cc  A2MagneticField.cc  A2PhysicsList.cc  A2PhysicsListMessenger.cc  A2PolarizedTarget.cc  A2PrimaryGeneratorAction.cc  A2PrimaryGeneratorMessenger.cc  A2RunAction.cc  A2SD.cc  A2SolidTarget.cc  A2SteppingAction.cc  A2SteppingVerbose.cc  A2Target.cc  A2VisCBSD.cc  A2VisHit.cc  A2VisSD.cc  A2WCSD.cc  MainPluto2Mkin.cxx  TIDhack.cc  TOGlobals.cxx  (+6 more)
